--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
-  <header id="header"  >
+  <header id="header" class="fixed-top header-transparent" >
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
@@ -35,6 +35,7 @@
               <ul>
                 <li><a href="about.html#Induce">Induce</a></li>
                 <li><a href="about.html#Our journey">Our journey</a></li>
+                <li><a href="about.html#R&D">R&D</a></li>
               </ul>
               <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
@@ -56,7 +57,7 @@
   </section>
   <main>
     <section id="Induce" style="color: #000;"class="container"><h1  >INDUCE</h1>
-      <p > Induce is a student community and R&D which is certified under MSME ( Ministry of Micro Small & Medium Enterprises ) by Central Government of India under the Act of 1999
+      <p > Induce is a student community and R&D which is certified under MSME ( Ministry of Micro Small & Medium Enterprises ) act 2006, by Central Government of India under the Act of 1999
         Induce started its journey on 06th of May 2020 with 
          a Vision of enlighting hidden skills in every one &  to fulfill the Mission of achieving Theories to Practical.
         Induce is a belief of Opportunities...
@@ -72,7 +73,13 @@
       <div class="embed-responsive  mx-auto d-block embed-responsive-16by9" style="width:75%;height: 30%;">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/obaWB9PDr60" allowfullscreen></iframe>
       </div>
-      
+    </section>
+    <section id="R&D" style="color: #000;"class="container" >
+      <h2 style="padding-top:15px;padding-bottom : 15px;">R&D</h2>
+      <P>
+        Research and development (R&D) includes activities that companies undertake to innovate and introduce new products and services. It is often the first stage in the development process. 
+        Coming to the R&D,INDUCE is also perusing the duty to make empower each and every student towards innovation and invention and making the product development by collaborating with different government R&D'S and Private industries.
+      </P>
     </section>
   </main>
   <div class="contact-clean">
