--- a/explore.html
+++ b/explore.html
@@ -25,8 +25,8 @@
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
-  <header id="header" >
-    <div >
+  <header id="header" class="fixed-top header-transparent">
+    <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
           <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
@@ -37,6 +37,7 @@
                 <ul>
                   <li><a href="about.html#Induce">Induce</a></li>
                   <li><a href="about.html#Our journey">Our journey</a></li>
+                  <li><a href="about.html#R&D">R&D</a></li>
                 </ul>
               <li class="active drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
