--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <ul>
                 <li><a href="about.html#Induce">Induce</a></li>
                 <li><a href="about.html#Our journey">Our journey</a></li>
-                <!--<li><a href="about.html">R&D</a></li><li>-->
+                <li><a href="about.html#R&D">R&D</a></li>
               </ul>
               <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
