--- a/events.html
+++ b/events.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
-  <header id="header" >
+  <header id="header" class="fixed-top header-transparent">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
@@ -35,6 +35,7 @@
               <ul>
                 <li><a href="about.html#Induce">Induce</a></li>
                 <li><a href="about.html#Our journey">Our journey</a></li>
+                <li><a href="about.html#R&D">R&D</a></li>
               </ul>
               <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
