--- a/explore.html
+++ b/explore.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
+          <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/img-1.png"></a></h1>
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; Home</a></li>
