--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     
   </header>
-  <section id="hero" style="background-image: url(assets/img/bg.jpg);background-position: center; " class="d-flex flex-column justify-content-center ">
+  <section id="hero" style="background-image: url(assets/img/bg.png);background-position: center; " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
       <h1 style="color: white;">-INDUCE-</h1>
