--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
    </section><br>&ensp;
    <h3 style="text-align: center;color: black;"> 
-    <b>-----UPDATES-----</b>
+    <b>----UPDATES----</b>
    </h3>
    <section >
     <div id="introCarousel" class="carousel slide" data-ride="carousel">
