--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   </section>
   <main>
     <section id="Induce" style="color: #000;"class="container"><h1  >INDUCE</h1>
-      <p > Induce is a student community and R&D which is certified under MSME ( Ministry of Micro Small & Medium Enterprises ) act 2006, by Central Government of India under the Act of 1999
+      <p > Induce is a student community and R&D which is certified under MSME ( Ministry of Micro Small & Medium Enterprises ) act 2006, by Central Government of India.
         Induce started its journey on 06th of May 2020 with 
          a Vision of enlighting hidden skills in every one &  to fulfill the Mission of achieving Theories to Practical.
         Induce is a belief of Opportunities...
