--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <span
            class="txt-rotate "
            data-period="2000"
-           data-rotate='["Together to know | Together to share | Together to explore | A student community | Certified under MSME | Technical to practical | Research To development" ]'></span>
+           data-rotate='["Together to know | Together to share | Together to explore | student community | Certified under MSME | Technical to practical | Research To development" ]'></span>
          </em>
         </h1>
      
