--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </h1>
      
     </div>
-   </section><br>&ensp;
-   <h3 style="text-align: center;color: black;"> 
+   </section>
+   <h3 style="text-align: center;color: black;padding-top: 3%;"> 
     <b>-----UPDATES-----</b>
    </h3>
    <section >
