--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     
   </header>
-  <section id="hero" style="background-image: url(assets/img/bg.png);background-position: center; " class="d-flex flex-column justify-content-center ">
+  <section id="hero" style="background-image: url(assets/img/bga1.jpg);background-position: center; " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
       <h1 style="color: white;">-INDUCE-</h1>
@@ -61,7 +61,7 @@
         <span
            class="txt-rotate "
            data-period="2000"
-           data-rotate='["Together to know ","Together to share "," Together to explore "," student community "," Certified under MSME "," Technical to practical "," Research To development" ]'></span>
+           data-rotate='["Together to know ","Together to share "," Together to explore ","A student community "," Certified under MSME "," Technical to practical "," Research To development" ]'></span>
          </em>
         </h1>
      
