--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
-  <header id="header"  class="fixed-top header-transparent">
+  <header id="header"  class="fixed-top header-transparent ">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-         <!-- <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/img-1.png"></a></h1>-->
-          <nav class="nav-menu d-none d-lg-block">
-            <ul>
-              <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; home</a></li>
-              <li class="drop-down"><a  href="about.html"><span class="fa fa-info-circle fa-lg"></span>&ensp; About</a>
+         <h1 class="logo mr-auto"></h1>
+         <!--<a href="index.html"><img src="assets/img/img-1.png"></a>-->
+          <nav class="nav-menu d-none d-lg-block ">
+            <ul >
+              <li class="active "><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; home</a></li>
+              <li class="drop-down "><a  href="about.html"><span class="fa fa-info-circle fa-lg"></span>&ensp; About</a>
               <ul>
                 <li><a href="about.html#Induce">Induce</a></li>
                 <li><a href="about.html#Our journey">Our journey</a></li>
                 <li><a href="about.html#R&D">R&D</a></li>
               </ul>
-              <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
+              <li class="drop-down "><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
                 <li><a href="explore.html">Article</a></li>
               </ul>
-              <li class="drop-down"><a  href="events.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>&ensp; Events</a>
+              <li class="drop-down "><a  href="events.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>&ensp; Events</a>
               <ul>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
@@ -53,7 +54,7 @@
     </div>
     
   </header>
-  <section id="hero" style="background-image: url(assets/img/bga3.jpg); " class="d-flex flex-column justify-content-center ">
+  <section id="hero" style="background-image: url(assets/img/bga4.png); " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
       <h1 style="color: white;">-INDUCE-</h1>
