--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <img src="assets/img/team-1.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sai Raj</h4>
+                  <h4>Sai Raj Ramdeni</h4>
                   <h4>- Chief Executive Officer</h4>
                 </div>
               </div>
@@ -170,7 +170,7 @@
               <img src="assets/img/team-3.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Rakesh</h4>
+                  <h4>Rakesh kumar ch</h4>
                   <h4>- Chief Marketing officer</h4>   
                 </div>
               </div>
@@ -182,7 +182,7 @@
               <img src="assets/img/team-2.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sushanth</h4>
+                  <h4>Sushanth Mamidoju</h4>
                   <h4>- Chief Designing Officer</h4> 
                 </div>
               </div>
@@ -194,7 +194,7 @@
               <img src="assets/img/team-5.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Bhanu Prakash</h4>  
+                  <h4>Bhanu Prakash Kyatham</h4>  
                   <h4>- Chief External Affairs officer</h4>  
                 </div>
               </div>
