--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <img src="assets/img/team-3.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Rakesh kumar ch</h4>
+                  <h4>Rakesh kumar CH</h4>
                   <h4>- Chief Marketing officer</h4>   
                 </div>
               </div>
