--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/img-1.png"></a></h1>
+          <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; Home</a></li>
@@ -52,8 +52,8 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron img-fluid">
-    <h1 style="color: white;text-align: center;" > ABOUT</h1>
+  <section class="jumbotron " style="background-position: center;background-image: url(assets/img/abo.jpg); ">
+    <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
   <main>
     <section id="Induce" style="color: #000;"class="container"><h1  >INDUCE</h1>
