--- a/explore.html
+++ b/explore.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/img-1.png"></a></h1>
+          <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; Home</a></li>
@@ -61,12 +61,12 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron img-fluid"   >
-    <h1 style="color: white;text-align: center;" >EXPLORE</h1>
+  <section class="jumbotron" style="background-position: center;background-image: url(assets/img/exp.jpg); "   >
+    <h1 style="text-align: center;color: white;" ><br>&ensp;<br>&ensp;</h1>
   </section>
   <main id="main">
   <section id="about">
-      <div class="container" data-aos="fade-up" ">
+      <div class="container" data-aos="fade-up" >
         
         <div class="row about-cols">
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
