--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-         <h1 class=" mr-auto">&ensp;</h1>
+         <h1 class="logo mr-auto"></h1>
          <!--<a href="index.html"><img src="assets/img/img-1.png"></a>-->
           <nav class="nav-menu d-none d-lg-block ">
             <ul >
