--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
 <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+<style>
+  #header .logo {
+    line-height: 1;
+    border-left: 4px solid rgba(0, 0, 0, 0.00000000001);
+  }
+</style>
 </head>
 <body>
   <header id="header"  class="fixed-top header-transparent ">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-         <h1 class="logo mr-auto"></h1>
+         <h1 class="logo mr-auto">&ensp;</h1>
          <!--<a href="index.html"><img src="assets/img/img-1.png"></a>-->
           <nav class="nav-menu d-none d-lg-block ">
             <ul >
