--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </ul>
               <li class="drop-down "><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
-                <li><a href="explore.html">Article</a></li>
+                <li><a href="explore.html">Articles</a></li>
               </ul>
               <li class="drop-down "><a  href="events.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>&ensp; Events</a>
               <ul>
