--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
    </section>
    <h3 style="text-align: center;color: black;padding-top: 3%;"> 
-    <b>------UPDATES------</b>
+    <b>UPDATES</b>
    </h3>
    <section >
     <div id="introCarousel" class="carousel slide" data-ride="carousel">
