--- a/about.html
+++ b/about.html
@@ -11,16 +11,16 @@
 
 
   <link href="assets/img/img-1.png" rel="icon">
-<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-<link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
-<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-<link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-<link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-<link href="assets/vendor/aos/aos.css" rel="stylesheet">
-<link href="assets/css/style.css" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
   <header id="header" class="fixed-top header-transparent" >
@@ -74,7 +74,7 @@
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/obaWB9PDr60" allowfullscreen></iframe>
       </div>
     </section>
-    <section id="R&D" style="color: #000;"class="container" >
+    <section id="R&D" style="color: #000;"class="container" ><hr>
       <h2 style="padding-top:15px;padding-bottom : 15px;">R&D</h2>
       <P>
         Research and development (R&D) includes activities that companies undertake to innovate and introduce new products and services. It is often the first stage in the development process. 
