--- a/articles.html
+++ b/articles.html
@@ -54,7 +54,7 @@
     
   </header>
   <section class="jumbotron img-fluid" style="background-color: black;"   >
-    <h1 style="color: white;text-align: center;" >ARTICLES</h1>
+    <h1 style="color: white;text-align: center;"><br>&ensp;ARTICLES<br>&ensp;</h1>
   </section>
   <section class="container col-md-8" id="article1" style="color: #000;">
     <h2 class="title" style="font-weight:700"><a href="#"></a>ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE</h2>
