--- a/about.html
+++ b/about.html
@@ -10,17 +10,17 @@
   <meta content="" name="keywords">
 
 
-  <link href="assets/img/img-1.png" rel="icon">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+<link href="assets/img/img-1.png" rel="icon">
+<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+<link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+<link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+<link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+<link href="assets/vendor/aos/aos.css" rel="stylesheet">
+<link href="assets/css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
 </head>
 <body>
   <header id="header" class="fixed-top header-transparent" >
@@ -31,17 +31,17 @@
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; Home</a></li>
-              <li class="active drop-down"><a href="about.html" ><span class="fa fa-info fa-lg"></span>&ensp; About</a>
+              <li class="active drop-down"><a href="about.html" ><i class="fa fa-info fa-lg"></i>&ensp; About</a>
               <ul>
                 <li><a href="about.html#Induce">Induce</a></li>
                 <li><a href="about.html#Our journey">Our journey</a></li>
                 <li><a href="about.html#R&D">R&D</a></li>
               </ul>
-              <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
+              <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
                 <li><a href="explore.html">Articles</a></li>
               </ul>
-              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>&ensp; Events</a>
+              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp; Events</a>
               <ul>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
