--- a/articles.html
+++ b/articles.html
@@ -31,17 +31,17 @@
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li ><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; home</a></li>
-              <li class="drop-down"><a  href="about.html"><span class="fa fa-info-circle fa-lg"></span>&ensp; About</a>
+              <li class="drop-down"><a  href="about.html"><i class="fa fa-info-circle fa-lg"></i>&ensp; About</a>
               <ul>
                 <li><a href="about.html#Induce">Induce</a></li>
                 <li><a href="about.html#Our journey">Our journey</a></li>
                 <li><a href="about.html#R&D">R&D</a></li>
               </ul>
-              <li class="drop-down active"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg" aria-hidden="true "></i>&ensp; Explore</a>
+              <li class="drop-down active"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp; Explore</a>
               <ul>
                 <li><a href="explore.html">Article</a></li>
               </ul>
-              <li class="drop-down"><a  href="events.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i>&ensp; Events</a>
+              <li class="drop-down"><a  href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp; Events</a>
               <ul>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
