--- a/explore.html
+++ b/explore.html
@@ -39,18 +39,18 @@
           <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
           <nav class="nav-menu d-none d-lg-block">
             <ul>
-              <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; Home</a></li>
-              <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp; About</a>
+              <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
+              <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
                 <ul>
                   <li><a href="about.html#Induce">Induce</a></li>
-                  <li><a href="about.html#Our journey">Our journey</a></li>
+                  <li><a href="about.html#Our journey">Our Journey</a></li>
                   <li><a href="about.html#R&D">R&D</a></li>
                 </ul>
-              <li class="active drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp; Explore</a>
+              <li class="active drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
                 <li><a href="explore.html">Articles</a></li>
               </ul>
-              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp; Events</a>
+              <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
                 <li><a href="events.html#Milestone">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
