--- a/articles.html
+++ b/articles.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/img-1.png"></a></h1>
+          <h1 class="logo mr-auto"><a href="index.html">INDUCE</a></h1>
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp; home</a></li>
@@ -53,8 +53,8 @@
     </div>
     
   </header>
-  <section class="jumbotron img-fluid"   >
-    <h1 style="color: white;text-align: center;" >ARTICLES</h1>
+  <section class="jumbotron img-fluid"id="imgtop" style="background-position: center;background-image: url(assets/img/article.png);"    >
+    <!-- <h1 style="color: white;text-align: center;" >ARTICLES</h1> -->
   </section>
   <section class="container col-md-8" id="article1">
     <h2 class="title" style="font-weight:700"><a href="#"></a>ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE</h2>
