--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
    <h3 style="text-align: center;color: black;padding-top: 3%;"> 
     <b>UPDATES</b>
    </h3>
-   <section >
+   <section id="car">
     <div id="introCarousel" class="carousel slide" data-ride="carousel">
      <ol class="carousel-indicators">
      </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/img/car4.jpg"  class="d-block w-100" alt="...">
+        <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="assets/img/car5.jpg"  class="d-block w-100" alt="...">
