--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron " style="background-position: center;background-image: url(assets/img/abo.jpg); ">
+  <section class="jumbotron " id="imgtop" style="background-position: center;background-image: url(assets/img/about4.png); ">
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
   <main>
