--- a/explore.html
+++ b/explore.html
@@ -61,7 +61,7 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron" style="background-position: center;background-image: url(assets/img/exp.jpg); "   >
+  <section class="jumbotron" id="imgtop" style="background-position: center;background-image: url(assets/img/explor4.png);"   >
     <h1 style="text-align: center;color: white;" ><br>&ensp;<br>&ensp;</h1>
   </section>
   <main id="main">
