--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="active drop-down"><a href="about.html" ><i class="fa fa-info fa-lg"></i>&ensp;About</a>
               <ul>
-                <li><a href="about.html#Induce">Induce</a></li>
-                <li><a href="about.html#Our journey">Our Journey</a></li>
-                <li><a href="about.html#R&D">R&D</a></li>
+                <li><a href="about.html">Induce</a></li>
+                <li><a href="about.html#Ourjourney">Our Journey</a></li>
+                <li><a href="about.html#RD">R&D</a></li>
               </ul>
               <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
@@ -43,7 +43,7 @@
               </ul>
               <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
-                <li><a href="events.html#Milestone">Milestone</a></li>
+                <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
               </ul>
             </ul>
@@ -56,7 +56,7 @@
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
   <main>
-    <section id="Induce" style="color: #000;"class="container"><h1  >INDUCE</h1>
+    <section id="Induce" style="color: #000;"class="container"><h2 >INDUCE</h2>
       <p > Induce is a student community and R&D which is certified under MSME ( Ministry of Micro Small & Medium Enterprises ) act 2006, by Central Government of India.
         Induce started its journey on 06th of May 2020 with 
          a Vision of enlighting hidden skills in every one &  to fulfill the Mission of achieving Theories to Practical.
@@ -68,14 +68,14 @@
       </p>
        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/induce.jpeg">
     </section><hr>
-    <section id="Our journey" style="color: #000;"class="container" >
-      <h2 style="padding-top:15px;padding-bottom : 15px;">OUR JOURNEY</h2>
+    <section id="Ourjourney" style="color: #000;"class="container" >
+      <h2 >OUR JOURNEY</h2>
       <div class="embed-responsive  mx-auto d-block embed-responsive-16by9" style="width:75%;height: 30%;">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/obaWB9PDr60" allowfullscreen></iframe>
       </div>
-    </section>
-    <section id="R&D" style="color: #000;"class="container" ><hr>
-      <h2 style="padding-top:15px;padding-bottom : 15px;">R&D</h2>
+    </section><hr>
+    <section id="RD" style="color: #000;"class="container" >
+      <h2>R&D</h2>
       <P>
         Research and development (R&D) includes activities that companies undertake to innovate and introduce new products and services. It is often the first stage in the development process. 
         Coming to the R&D,INDUCE is also perusing the duty to make empower each and every student towards innovation and invention and making the product development by collaborating with different government R&D'S and Private industries.
