--- a/explore.html
+++ b/explore.html
@@ -42,9 +42,9 @@
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
                 <ul>
-                  <li><a href="about.html#Induce">Induce</a></li>
-                  <li><a href="about.html#Our journey">Our Journey</a></li>
-                  <li><a href="about.html#R&D">R&D</a></li>
+                  <li><a href="about.html">Induce</a></li>
+                  <li><a href="about.html#Ourjourney">Our Journey</a></li>
+                  <li><a href="about.html#RD">R&D</a></li>
                 </ul>
               <li class="active drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
@@ -52,7 +52,7 @@
               </ul>
               <li class="drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
-                <li><a href="events.html#Milestone">Milestone</a></li>
+                <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
               </ul>
             </ul>
@@ -78,7 +78,7 @@
               
    <h2 class="title"><a href="#">ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE </h2>
 <p>Every year there are many inventions and innovations all over the world which makes people life easy and reduce hard work. Many people who are educated and uneduca...</p>
-<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;text-decoration:none;"><a href="articles.html#article1">Read more</a></button>
+<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;text-decoration:none;"><a href="articles.html">Read more</a></button>
 <!-- <script>
 function myFunction() {
   var dots = document.getElementById("dots");
