--- a/events.html
+++ b/events.html
@@ -33,9 +33,9 @@
               <li><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down"><a href="about.html"><i class="fa fa-info fa-lg"></i>&ensp;About</a>
               <ul>
-                <li><a href="about.html#Induce">Induce</a></li>
-                <li><a href="about.html#Our journey">Our Journey</a></li>
-                <li><a href="about.html#R&D">R&D</a></li>
+                <li><a href="about.html">Induce</a></li>
+                <li><a href="about.html#Ourjourney">Our Journey</a></li>
+                <li><a href="about.html#RD">R&D</a></li>
               </ul>
               <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true"></i>&ensp;Explore</a>
               <ul>
@@ -43,7 +43,7 @@
               </ul>
               <li class="active drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
-                <li><a href="events.html#Milestone">Milestone</a></li>
+                <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
               </ul>
             </ul>
