--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
          <!--<a href="index.html"><img src="assets/img/img-1.png"></a>-->
           <nav class="nav-menu d-none d-lg-block ">
             <ul >
-              <li class="active "><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
+              <li class="active"><a href="index.html"><span class="fa fa-home fa-lg"></span>&ensp;Home</a></li>
               <li class="drop-down "><a  href="about.html"><i class="fa fa-info-circle fa-lg"></i>&ensp;About</a>
               <ul>
-                <li><a href="about.html#Induce">Induce</a></li>
-                <li><a href="about.html#Our journey">Our Journey</a></li>
-                <li><a href="about.html#R&D">R&D</a></li>
+                <li><a href="about.html">Induce</a></li>
+                <li><a href="about.html#Ourjourney">Our Journey</a></li>
+                <li><a href="about.html#RD">R&D</a></li>
               </ul>
               <li class="drop-down "><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
@@ -50,7 +50,7 @@
               </ul>
               <li class="drop-down "><a  href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
-                <li><a href="events.html#Milestone">Milestone</a></li>
+                <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
               </ul>
             </ul>
