--- a/articles.html
+++ b/articles.html
@@ -54,7 +54,7 @@
     
   </header>
   <section class="jumbotron img-fluid"id="imgtop" style="background-position: center;background-image: url(assets/img/article.png);"    >
-    
+    <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
   <section class="container col-md-8" id="article1" style="color: #000;">
     <h2 class="title" style="font-weight:700"><a href="#"></a>ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE</h2>
