--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
      </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/car4.jpg" id="borderimg"class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/car5.jpg"  class="d-block w-100" alt="...">
+        <img src="assets/img/car5.jpg" id="borderimg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
+        <img src="assets/img/car6.jpg" id="borderimg" class="d-block w-100" alt="...">
       </div>
     </div>
      <a class="carousel-control-prev " href="#introCarousel" role="button" data-slide="prev">
@@ -98,7 +98,7 @@
      </a>
      <a class="carousel-control-next " href="#introCarousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+      <span class="sr-only" >Next</span>
      </a>
     </div>
     </section>
