--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       </div>
     </div>
      <a class="carousel-control-prev " href="#introCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev-icon" aria-hidden="true" id="carousel1"></span>
       <span class="sr-only">Previous</span>
      </a>
-     <a class="carousel-control-next " href="#introCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <a class="carousel-control-next " href="#introCarousel" role="button"data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"  id="carousel2" ></span>
       <span class="sr-only" >Next</span>
      </a>
     </div>
