--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
                 <li><a href="about.html">Induce</a></li>
                 <li><a href="about.html#Ourjourney">Our Journey</a></li>
                 <li><a href="about.html#RD">R&D</a></li>
+                <li><a href="about.html#departments">Departments</a></li>
               </ul>
               <li class="drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
@@ -80,6 +81,71 @@
         Research and development (R&D) includes activities that companies undertake to innovate and introduce new products and services. It is often the first stage in the development process. 
         Coming to the R&D,INDUCE is also perusing the duty to make empower each and every student towards innovation and invention and making the product development by collaborating with different government R&D'S and Private industries.
       </P>
+    </section><hr>
+    <section id="departments" style="color: #000;"class="container"><h2>DEPARTMENTS</h2>
+      <h3>Program Manager</h3>
+      <p>A Program Manager is like a doctor who leads the trauma team and decides the course of action for a patient - both at the same time. Without the right kind of authority to efficiently handle all the project management issues, development teams can easily get into trouble. 
+      </p>
+      <h3>Designing Department</h3>
+      <p>It aims at showing induce on digistal platform in a better looking way.</p>
+      <h3>Marketing Department</h3>
+      <p>the aim of the marketing department is to generate revenue. All its activities are aimed at broadening the customer base and finding opportunities that would create more revenue for the organization.
+      </p>
+      <h3>Finance Department</h3>
+      <p>Finance department where we dealt with all financial issues like incoming and outgoing money from induce.Work with and give guidance to volunteers and staff involved in event planning and execution</p>
+      <h3>Human Resources Department</h3>
+      <p>Recruitment includes all the activities an organization may use to attract a pool of viable candidates. Effective recruiting is increasingly important today for several reasons.</p>
+      <h3>Political Department</h3>
+      <p>This department has come up keeping in thought of current affairs
+        We need to know what is happening in and around the nation.
+        We mainly focus on current affairs related 
+        We want to make sure that every individual has some basic knowledge regarding politics as youth role is going to be must in future.</p>
+      <h3>Resources Department</h3>
+      <p>This department deals with all the resources available across India
+          It needs to focus on resources available and need to pen down thoughts how these resources can be used.
+          If current govt is not using in a proper way we need to pen down thee consequences of it and suggest alternations</p>
+      <h3>Media Department</h3>
+      <p>This department has emerged keeping in point of view of attraction
+          We need to develop induce as media platform for learning, knowing etc.
+          We release a post telling all the information of a particular day i.e. international, national, regional, local
+          We release a video telling all the daily updated at night</p>
+      <h3>Daily Innovators Updates</h3>
+      <p>Innovation is useful when it comes out rather than keeping than keeping it self, this department has emerged.
+        Daily innovations need to be updated to public through induce, with the names of innovators etc if required</p>
+      <h3>Career Development</h3>
+      <P>Browse daily on any updates for job applications for graduate or undergraduate students in any stream.
+         Need to suggest some books, tips & need to answer the questions given for you from staff.
+           Gather all the steps & ways to get into job for all branches.
+      </P>
+      <h3>Sports</h3>
+      <p>Browse for the challenges taken by India, daily regards sports.
+         Update review on a person who is currently giving his best performance. 
+          Be sure to cover all day to day updates regards all sports & games.
+          Collect all rules and regulations to be followed in that particular game.
+         Update on achievements made by India currently in streams of sports.
+      </p>
+      <h3>Tourism & Transportation
+      </h3>
+     <p>Day to day updates on new technology introduced into Transportation stream.
+        About hidden mechanisms in automobiles in all ways of transportation.
+        Rules & regulations for particular transportation field.
+        Information on Symbols & numbers we come across those streams.</p>
+      <h3>Environment</h3>
+      <p>Whether forecast details updates daily in different states.
+        Updates on Problems faced currently regards pollution, crops, natural calamities etc.
+       Research on all types of resources available in India.</p>
+      <h3>Aptitude Development</h3>
+      <p>Daily puzzles & logic quizzes.
+        Framing questions on Grammatical skills.</p>
+      <h3>Content Department</h3>
+      <p>Gathering of best sites for information
+        Search in best sites on given topic. Understand the concept & try to frame sentences in a brief manner.
+        </p>
+      <h3>Documentation Department</h3>
+      <p>Documentation plays one of the major roles in any work.</p>
+      <h3>Publicity</h3>
+      <p>This stream in Induce promotes main motto of giving updates & sharing of trending concepts related to Scientific & Technology for all. We have access to social media through LinkedIn, Twitter,  Instagram. </p>
+
     </section>
   </main>
   <div class="contact-clean">
