--- a/explore.html
+++ b/explore.html
@@ -45,6 +45,7 @@
                   <li><a href="about.html">Induce</a></li>
                   <li><a href="about.html#Ourjourney">Our Journey</a></li>
                   <li><a href="about.html#RD">R&D</a></li>
+                  <li><a href="about.html#departments">Departments</a></li>
                 </ul>
               <li class="active drop-down"><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
