--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <li><a href="about.html">Induce</a></li>
                 <li><a href="about.html#Ourjourney">Our Journey</a></li>
                 <li><a href="about.html#RD">R&D</a></li>
+                <li><a href="about.html#departments">Departments</a></li>
               </ul>
               <li class="drop-down "><a href="explore.html"><i class="fa fa-puzzle-piece fa-lg"aria-hidden="true "></i>&ensp;Explore</a>
               <ul>
