--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
       <p>the aim of the marketing department is to generate revenue. All its activities are aimed at broadening the customer base and finding opportunities that would create more revenue for the organization.
       </p>
       <h3>Finance Department</h3>
-      <p>Finance department where we dealt with all financial issues like incoming and outgoing money from induce.Work with and give guidance to volunteers and staff involved in event planning and execution</p>
+      <p>Finance department where we dealt with all financial issues like incoming and outgoing money from induce.Work with and give guidance to volunteers and staff involved in event planning and execution.</p>
       <h3>Human Resources Department</h3>
       <p>Recruitment includes all the activities an organization may use to attract a pool of viable candidates. Effective recruiting is increasingly important today for several reasons.</p>
       <h3>Political Department</h3>
@@ -103,15 +103,15 @@
       <h3>Resources Department</h3>
       <p>This department deals with all the resources available across India
           It needs to focus on resources available and need to pen down thoughts how these resources can be used.
-          If current govt is not using in a proper way we need to pen down thee consequences of it and suggest alternations</p>
+          If current govt is not using in a proper way we need to pen down thee consequences of it and suggest alternations.</p>
       <h3>Media Department</h3>
       <p>This department has emerged keeping in point of view of attraction
           We need to develop induce as media platform for learning, knowing etc.
           We release a post telling all the information of a particular day i.e. international, national, regional, local
-          We release a video telling all the daily updated at night</p>
+          We release a video telling all the daily updated at night.</p>
       <h3>Daily Innovators Updates</h3>
       <p>Innovation is useful when it comes out rather than keeping than keeping it self, this department has emerged.
-        Daily innovations need to be updated to public through induce, with the names of innovators etc if required</p>
+        Daily innovations need to be updated to public through induce, with the names of innovators etc if required.</p>
       <h3>Career Development</h3>
       <P>Browse daily on any updates for job applications for graduate or undergraduate students in any stream.
          Need to suggest some books, tips & need to answer the questions given for you from staff.
