--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
      </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/img/car4.jpg" id="borderimg"class="d-block w-100" alt="...">
+        <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/car5.jpg" id="borderimg" class="d-block w-100" alt="...">
+        <img src="assets/img/car5.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/car6.jpg" id="borderimg" class="d-block w-100" alt="...">
+        <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
       </div>
     </div>
      <a class="carousel-control-prev " href="#introCarousel" role="button" data-slide="prev">
