--- a/explore.html
+++ b/explore.html
@@ -55,6 +55,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
+                <li><a href="events.html#Innovate">Innovate India</a></li>
               </ul>
             </ul>
           </nav>
@@ -79,7 +80,7 @@
               
    <h2 class="title"><a href="#">ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE </h2>
 <p>Every year there are many inventions and innovations all over the world which makes people life easy and reduce hard work. Many people who are educated and uneduca...</p>
-<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;text-decoration:none;"><a href="articles.html">Read more</a></button>
+<a href="articles.html"><button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;text-decoration:none;">Read more</button></a>
 <!-- <script>
 function myFunction() {
   var dots = document.getElementById("dots");
@@ -109,7 +110,7 @@ function myFunction() {
               <h2 class="title"><a href="#"></a>A LOOK AT HOW WRIST WATCH WORKS</h2>
               <p>
                        Before going into working of a wrist watch, let's take a sneak peak into history of a wrist watches !! In starting of 20th century wrist watches have made it's way into market...</p>
-              <button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;"><a href="articles.html#article2">Read more</a></button>
+                       <a href="articles.html#article2"><button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;">Read more</button></a>
 <!-- <script>
 function myFunction2() {
   var dots = document.getElementById("dots2");
@@ -138,7 +139,7 @@ function myFunction2() {
               </div>
               <h2 class="title"><a href="#"></a>ESSAY ON INVENTIVE, INNOVATIVE, INTERROGATIVE</h2>
               <p>The story of civilization is in a sense, the story of engineering that long and arduous struggle to make the forces of nature work for man’s good. Engineering is not merely a subjec...</p>
-<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;"><a href="articles.html#article3">Read more</a></button>
+              <a href="articles.html#article3"><button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;">Read more</button></a>
 <!-- <script>
 function myFunction3() {
   var dots = document.getElementById("dots3");
@@ -171,7 +172,7 @@ function myFunction3() {
 “Why the radiation must be filtered???”</br>
 Last from six months  everything around us has been changed a lot.We all are now living in a new part of our life with “VIRTU...
 </p>
-<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;"><a href="articles.html#article4">Read more</a></span>
+<a href="articles.html#article4"><button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;">Read more</button></a>
 <!-- <script>
 function myFunction4() {
   var dots = document.getElementById("dots4");
@@ -204,7 +205,7 @@ Engineering is much more than a career choice, it is a way of mind. The ability 
 your understanding of the universe and manipulate it into useful tools to benefit humanity is a
 min...</p>
 
-<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;"><a href="articles.html#article5">Read more</a></button>
+<a href="articles.html#article5"><button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;">Read more</button></a>
 <!-- <script>
 function myFunction5() {
   var dots = document.getElementById("dots5");
@@ -238,7 +239,7 @@ function myFunction5() {
 actually the term engineering means?
 Engineering is not a subje...
 </p>
-<button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;"><a href="articles.html#article6">Read more</a></span>
+<a href="articles.html#article6"><button type="button" class="btn btn-success" style="margin-left: 2%;margin-bottom:2%;">Read more</button></a>
 
             </div>
           </div>
