--- a/articles.html
+++ b/articles.html
@@ -46,6 +46,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
+                <li><a href="events.html#Innovate">Innovate India</a></li>
               </ul>
             </ul>
           </nav>
