--- a/events.html
+++ b/events.html
@@ -46,6 +46,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
+                <li><a href="events.html#Innovate">Innovate India</a></li>
               </ul>
             </ul>
           </nav>
@@ -84,15 +85,40 @@
         <h2  >ISPEAK</h2>
         <p>
           It is an Innovative Speak event .
-It is a platform where an Innovator will address all the attended viewers for event regards sharing his/her own experience in his life
- towards Innovation. It is an two way interaction event where everyone gets chance to have a conversation with him/her. 
- It is a platform for all to share one's ideas & thoughts to make ur dreams more stronger. 
+          It is a platform where an Innovator will address all the attended viewers for event regards sharing his/her own experience in his life
+          towards Innovation. It is an two way interaction event where everyone gets chance to have a conversation with him/her. 
+          It is a platform for all to share one's ideas & thoughts to make ur dreams more stronger. 
         </p>
         <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg"><hr>
         <p>
           We believe " Innovation dont require Education but Innovation require Knowledge ".
-Be part of our event to add something to your extent of Knowledge.
+          Be part of our event to add something to your extent of Knowledge.
         </p>
+      </section>
+      <section id="Innovate" class="container" style="color: #000;">
+      <h2>INNOVATE INDIA</h2>
+      <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
+      <div class="d-flex justify-content-center">
+        <a href="https://bit.ly/32XW8Y3" target="_blank"><button type="button" class="btn btn-success ">Register Now</button></a></div><br>
+      <p>True Engineers not only focuses on getting knowledge, they develop a creative mindset which helps them to focus 
+        more on application-oriented ideology. Knowledge without application is like food with out nutrition. 
+        To bring out the hidden creative thoughts in you we <strong>“The Team Induce”</strong> Coming up with a great event named 
+       <strong>“Innovate India... idea battlefield”</strong>.</p>
+       <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/car7.png"><br>
+        <b>Event description:</b>
+        <p>
+          Our event named “Innovate India... idea battlefield” has two rounds. </p>
+          <b>Round 1:Wrap Up</b>
+          <p>In this round we invite all the participants to show case their creative, innovative ideas through
+             their abstracts. Once all the abstracts are submitted, we start sorting and we select the creative ideas 
+             which are more realistic, efficient. </p>
+             <b>Round2:Light Up</b>
+          <p>The creative minds who are selected in the first round are eligible for the second round. 
+            The responsibility of these participants is to make prototypes of their proposed ideas in a best possible manner he
+             best design with efficient working will be declared as the winner. 
+          Great opportunity is waiting for all of you. Utilize this and bring out the innovators in you. Wining or losing doesn’t matters. The thing which matters is your participation and efforts. This is a golden opportunity to give shape to your extraordinary ideas. Don’t miss it. Stay tuned for more updates. 
+          Team Induce wishes you all a very good luck. We are excited to meet you all in the event. 
+          </p>
       </section>
     </main>
     <div class="contact-clean">
