--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
+                <li><a href="events.html#Innovate">Innovate India</a></li>
               </ul>
             </ul>
           </nav>
@@ -83,15 +84,19 @@
      <ol class="carousel-indicators">
      </ol>
     <div class="carousel-inner">
+      <div class="carousel-item ">
+        <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
+      </div>
       <div class="carousel-item active">
+        <a href="events.html#Innovate"><img src="assets/img/car7.png" class="d-block w-100" alt="..."></a>
+      </div>
+      <div class="carousel-item ">
         <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="assets/img/car5.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
-        <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
-      </div>
+      
     </div>
      <a class="carousel-control-prev " href="#introCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true" id="carousel1"></span>
