--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item active">
-        <a href="events.html#Innovate"><img src="assets/img/car7.png" class="d-block w-100" alt="..."></a>
+        <a href="events.html#Innovate"><img src="assets/img/car7.jpg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item ">
         <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
