--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     
   </header>
-  <section id="hero" style="background-image: url(assets/img/bga2.png); " class="d-flex flex-column justify-content-center ">
+  <section id="hero" style="background-image: url(assets/img/bga2.jpg); " class="d-flex flex-column justify-content-center ">
   
     <div  class="hero-container" style="padding-left: 10%;">
       <h1 style="color: white;">-INDUCE-</h1>
