--- a/events.html
+++ b/events.html
@@ -89,18 +89,18 @@
           towards Innovation. It is an two way interaction event where everyone gets chance to have a conversation with him/her. 
           It is a platform for all to share one's ideas & thoughts to make ur dreams more stronger. 
         </p>
-        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg"><hr>
+        <img  class="rounded img-fluid  mx-auto d-block img-thumbnail" src="assets/img/ispeak.jpeg">
         <p>
           We believe " Innovation dont require Education but Innovation require Knowledge ".
           Be part of our event to add something to your extent of Knowledge.
         </p>
-      </section>
+      </section><hr>
       <section id="Innovate" class="container" style="color: #000;">
-      <h2>INNOVATE INDIA</h2>
-      <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
-      <div class="d-flex justify-content-center">
+        <h2>INNOVATE INDIA</h2>
+        <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
+        <div class="d-flex justify-content-center">
         <a href="https://bit.ly/32XW8Y3" target="_blank"><button type="button" class="btn btn-success ">Register Now</button></a></div><br>
-      <p>True Engineers not only focuses on getting knowledge, they develop a creative mindset which helps them to focus 
+        <p>True Engineers not only focuses on getting knowledge, they develop a creative mindset which helps them to focus 
         more on application-oriented ideology. Knowledge without application is like food with out nutrition. 
         To bring out the hidden creative thoughts in you we <strong>“The Team Induce”</strong> Coming up with a great event named 
        <strong>“Innovate India... idea battlefield”</strong>.</p>
