--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
-                <li><a href="events.html#Innovate">Innovate India</a></li>
+                <li><a href="events.html>Innovate India</a></li>
               </ul>
             </ul>
           </nav>
@@ -58,7 +58,7 @@
     <h1 style="color: white;text-align: center;" ><br>&ensp;<br>&ensp;</h1>
   </section>
     <main>
-      <section id="Innovate" class="container" style="color: #000;">
+      <section  class="container" style="color: #000;">
         <h2>INNOVATE INDIA</h2>
         <h5 style="text-align: center;"><b>"The true sign of intelligence is not knowledge but Imagination"</b></h5>
         <div class="d-flex justify-content-center">
