--- a/explore.html
+++ b/explore.html
@@ -55,7 +55,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
-                <li><a href="events.html">Innovate India</a></li>
+                <li><a href="events.html#inn">Innovate India</a></li>
               </ul>
             </ul>
           </nav>
