--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <ul>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
-                <li><a href="events.html">Innovate India</a></li>
+                <li><a href="events.html#inn">Innovate India</a></li>
               </ul>
             </ul>
           </nav>
@@ -88,7 +88,7 @@
         <img src="assets/img/car6.jpg"  class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item active">
-        <a href="events.html"><img src="assets/img/car7.jpg" class="d-block w-100" alt="..."></a>
+        <a href="events.html#inn"><img src="assets/img/car7.jpg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item ">
         <img src="assets/img/car4.jpg" class="d-block w-100" alt="...">
