--- a/events.html
+++ b/events.html
@@ -44,9 +44,10 @@
               </ul>
               <li class="active drop-down"><a href="events.html"><i class="fa fa-calendar fa-lg"aria-hidden="true"></i>&ensp;Events</a>
               <ul>
+                <li><a href="events.html#inn">Innovate India</a></li>
                 <li><a href="events.html">Milestone</a></li>
                 <li><a href="events.html#Ispeak">Ispeak</a></li>
-                <li><a href="events.html#inn">nnovate India</a></li>
+                
               </ul>
             </ul>
           </nav>
